# jsonie

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: main.yml
src/jsonie/: __init__.py  exceptions.py  pointer.py  to_jsonic.py  types.py  typing_compat.py  utils.py
src/jsonie/tests/: _future_annotations_fixtures.py  test_pointer.py  test_to_jsonic.py
