[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
exclude = '''
    .git
    | .github
    | .mypy_cache
    | .venv
    | docs
    | build
    | dist
'''

[tool.isort]
profile = "black"
multi_line_output = 3
honor_noqa = true
group_by_package = true
