[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsonie"
version = "0.0.8"
description = "conversion between JSON and typed Python objects having Json-like structure"
readme = "README.md"
license = "MIT"
authors = [{ name = "Moriyoshi Koizumi", email = "mozo@mozo.jp" }]
keywords = ["json", "dataclasses", "typing"]
requires-python = ">=3.8"
dependencies = ["iso8601"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jsonie"]

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov"]

[[tool.hatch.envs.default.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
cov = "pytest --cov --cov-report=xml {args}"

[tool.hatch.envs.lint]
dependencies = ["ruff", "mypy", "pytest"]

[tool.hatch.envs.lint.scripts]
check = [
    "ruff check src",
    "ruff format --check src",
    "mypy",
]
fmt = [
    "ruff check --fix src",
    "ruff format src",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true

[tool.mypy]
files = "src/"
