[metadata]
name = jsonie
version = 0.0.7
description = conversion between JSON and typed Python objects having Json-like structure
long_description = file:README.md
author = Moriyoshi Koizumi <mozo@mozo.jp>
keywords = json, dataclasses, typing
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
install_requires =
    iso8601
tests_require =
    pytest
packages = find:
package_dir =
    = src

[options.package_data]
* =
    py.typed

[options.packages.find]
where = src

[mypy]
files = src/
